@@ -295,6 +295,8 @@ class TestFloat < Test::Unit::TestCase
     assert_equal(1.110, 1.111.round(2))
     assert_equal(11110.0, 11111.1.round(-1))
     assert_equal(11100.0, 11111.1.round(-2))
+
+    assert_equal(10**300, 1.1e300.round(-300))
   end
 
   VS = [
